# ipc-bench

./: .gitignore  domain.sh  fifo.sh  generateGraphs.py  grapher.py  runBenchmarks.py  tcp.sh  temp.txt
benchmarkData/fifo/: 1 B.json  1 kB.json  128 B.json  16 B.json  2 kB.json  256 B.json  32 B.json  4 kB.json  512 B.json  64 B.json  8 B.json  8 kB.json
benchmarkData/realm/: 1 B.json  1 kB.json  128 B.json  16 B.json  2 kB.json  256 B.json  32 B.json  4 kB.json  512 B.json  64 B.json  8 B.json
benchmarkData/socket/: 1 B.json  1 kB.json  128 B.json  16 B.json  2 kB.json  256 B.json  32 B.json  4 kB.json  512 B.json  64 B.json  8 B.json
benchmarkData/tcp/: 1 B.json  1 kB.json  128 B.json  16 B.json  2 kB.json  256 B.json  32 B.json  4 kB.json  512 B.json  64 B.json  8 B.json
source/common/: CMakeLists.txt  arguments.c  arguments.h  benchmarks.c  benchmarks.h  rateGuard.c  rateGuard.h  shmSetup.c  shmSetup.h  utility.h
source/domain/: CMakeLists.txt  client.c  helper.c  helper.h  server.c
source/fifo/: CMakeLists.txt  client.c  fifo.c  helper.c  helper.h  server.c
source/tcp/: CMakeLists.txt  client.c  helper.c  helper.h  server.c
